# ATLAS-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROVIDER_SWITCH_USER_GUIDE.md  README.md  ROADMAP.md  SECOND_BRAIN_LIBRARIAN_SPEC.md  SECURITY.md  agent_exec.py  agent_runner.py  atlas_config.py  atlas_diagnostics.py  atlas_utils.py  bot.py  channel_configs.py  check_google_bot_auth.py  conftest.py  daily_digest.py  garmin_workout_fallback.py  mcp_tooling.py  med_config.py  meds.json.example  multi-channel-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  restart_atlas_services.sh  run_cron.sh  run_digest.sh  send_message.py  set_atlas_provider.sh  user-profile.json.example
.claude/: settings.local.json  skills
.claude/skills/: backend-concepts-lesson.md  daily-summary.md  health-pattern-monitor.md  log-cardio.md  log-medication.md  log-workout.md  morning-briefing.md  second-brain-librarian.md  weekly-review.md  weekly-training-planner.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cron/: context_drift.sh  daily_summary.sh  dispatcher.py  jobs.json  med_reminder.sh  ops_watchdog.py  session_archive.sh  task_triage.sh  vault_index.py
docs/: google-bot-account-setup.md
docs/guides/: channel-user-guide.md  provider-switch-user-guide.md
docs/plans/: multi-channel-plan.md  provider-switch-plan.md  roadmap.md
docs/specs/: second-brain-librarian.md
etc/logrotate.d/: atlas-bot
etc/systemd/: atlas-bot.service
hooks/: calendar_context.sh  librarian_context.sh  recent_changes.sh  recent_summaries.sh  tasks_summary.sh  workout_oura_data.sh
mcp-servers/garmin/: README.md  mcp_server.py  oauth_setup.py  requirements.txt
mcp-servers/garmin/src/: __init__.py  auth_manager.py  config.py
mcp-servers/garmin/src/garmin_api/: __init__.py  client.py
mcp-servers/garmin/src/garmin_mcp/: __init__.py  tools.py
mcp-servers/garmin/tests/: conftest.py  test_auth_manager.py  test_garmin_oauth_setup.py  test_garmin_tools.py
mcp-servers/google_bot/: README.md  mcp_server.py  oauth_setup.py  pyproject.toml  requirements.txt
mcp-servers/google_bot/src/: __init__.py  google_client.py  oauth_manager.py
mcp-servers/google_bot/src/google_bot_mcp/: __init__.py  tools.py
mcp-servers/google_bot/tests/: conftest.py  test_google_bot_tools.py  test_oauth_setup.py
mcp-servers/whoop/: README.md  mcp_server.py  oauth_setup.py  pyproject.toml  requirements-dev.txt  requirements.txt
mcp-servers/whoop/src/: __init__.py  config.py  oauth_manager.py
mcp-servers/whoop/src/whoop_api/: __init__.py  client.py
mcp-servers/whoop/src/whoop_mcp/: __init__.py  tools.py
mcp-servers/whoop/tests/: conftest.py  test_whoop_oauth_manager.py  test_whoop_tools.py
tests/: conftest.py  test_agent_runner.py  test_atlas_diagnostics.py  test_bot_attachments.py  test_bot_claude.py  test_bot_commands.py  test_bot_librarian_commands.py  test_bot_medication.py  test_bot_model.py  test_bot_permissions.py  test_bot_reactions.py  test_bot_sessions.py  test_calendar_context_hook.py  test_channel_configs.py  test_check_google_bot_auth.py  test_cron_routing.py  test_dispatcher_execution.py  test_dispatcher_main.py  test_dispatcher_schedule.py  test_dispatcher_state.py  test_dispatcher_webhook.py  test_garmin_workout_fallback.py  test_ops_watchdog.py  test_send_message.py  test_session_archive_script.py  test_skill_path_references.py  test_training_planner_config.py  test_vault_index.py
