[project]
name = "atlas-bot"
version = "0.1.0"
description = "Discord bot that wraps a configurable agent harness for conversational AI assistance"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "James Mooney", email = "james@mooneysecurity.com"}
]
dependencies = [
    "aiohttp>=3.9",
    "croniter>=1.3",
    "discord.py>=2.0",
    "garminconnect>=0.2.38",
    "garth>=0.8.0,<1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "google-api-python-client>=2.169.0",
    "google-auth>=2.40.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "mcp>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "structlog>=23.2.0",
]

[tool.setuptools]
py-modules = [
    "agent_exec",
    "agent_runner",
    "atlas_config",
    "atlas_utils",
    "bot",
    "garmin_workout_fallback",
    "mcp_tooling",
    "med_config",
    "send_message",
]

[tool.pytest.ini_options]
testpaths = ["tests", "mcp-servers/garmin/tests", "mcp-servers/google_bot/tests", "mcp-servers/oura/tests", "mcp-servers/whoop/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error::RuntimeWarning",
    "ignore::DeprecationWarning:discord.*",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["mcp-servers"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
